<resources>
    <string name="app_name">Wizardry</string>
    <string name="semPerLigar">Sua aplicação não tem permissão para ligar</string>
    <string name="semPerLoca">Sua aplicação não tem acesso à localização</string>
    <string name="pv">Pontos de vida</string>
    <string name="name">Name</string>
    <string name="cronometro">Cronômetro</string>
    <string name="iniciar_jogo">Iniciar Jogo</string>
    <string name="imagem_de_cabecalho">Imagem de cabeçalho</string>
    <string name="wizardry">WIZARDRY</string>
    <string name="mtg_life_counter">MTG Life Counter</string>
    <string name="start">Start</string>
    <string name="game_history">Game History</string>
    <string name="icon_a">Icon A</string>
    <string name="icon_b">Icon B</string>
    <string name="_20">20</string>
    <string name="_2">2</string>
    <string name="menu">Menu</string>
    <string name="refazer">Refazer</string>
    <string name="desfazer">Desfazer</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="_00_00">00:00</string>
    <string name="nome_do_jogador_a">Nome do Jogador A</string>
    <string name="nome_do_jogador_b">Nome do Jogador B</string>
    <string name="initialConfig">Configuração inicial</string>
    <string name="initialPV">PV Inicial</string>
    <string name="ver_todas_as_localiza_es">Ver todas as localizações</string>
</resources>